# foximg

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  README.md  build.rs
crates/image/: Cargo.toml  README.md
crates/image/src/: foximg.rs  lib.rs
crates/image/src/codecs/: gif.rs  png.rs
crates/image/src/codecs/pnm/: decoder.rs
crates/image/src/codecs/webp/: decoder.rs
share/applications/: foximg.desktop
src/: cli.rs  config.rs  controls.rs  foximg_error.rs  foximg_help.rs  foximg_log.rs  image.rs  images.rs  main.rs  menu.rs  resources.rs
src/config/: foximg_color.rs  win32.rs
src/images/: foximg_gif_decoder.rs  foximg_image_loader.rs  foximg_png_decoder.rs  foximg_webp_decoder.rs
src/resources/: mod.rs  resources.rs
