[package]
name = "foximg"
authors = ["bruvy"]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
image = "0.25.4"
native-dialog = "0.7.0"
raylib = { version = "5.0.2", features = ["serde", "with_serde"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
toml = "0.8.19"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["UI_ViewManagement"] }
winapi = { version = "0.3.9", features = ["dwmapi"] }

[profile.dev.package.zune-jpeg]
opt-level = 3
