[workspace]
resolver = "3"
members = ["crates/image"]

[workspace.dependencies]
raylib = { version = "5.5.1", features = ["serde", "with_serde"] }

[package]
name = "foximg"
description = "Simple & convenient image viewer"
authors = ["bruvy"]
version = "0.3.0-dev"
license-file = "LICENSE"
edition = "2024"

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1

[profile.release-thin]
inherits = "release"
debug = false
strip = true

[dependencies]
raylib = { workspace = true }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.21"
aho-corasick = "1.1.3"
serde_json = "1.0.140"
circular-buffer = "1.1.0"                              # TODO: Remove this dependency
chrono = "0.4.40"                                      # TODO: Possibly remove this dependency
tinyfiledialogs = "3.9.1"                              # TODO: Possibly remove this dependency

# Dependencies regarding image decoding:

kamadak-exif = "0.6.1"
image = { path = "crates/image", default-features = false, features = [
    "rayon",
    "bmp",
    "dds",
    "exr",
    "ff",
    "hdr",
    "ico",
    "jpeg",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "png",
    "gif",
    "webp",
    "serde",
] }

[build-dependencies]
winresource = "0.1.20"

# Windows specific:

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
windows-link = "0.1.1"

[package.metadata.winresource]
InternalName = "foximg"
LegalCopyright = "Copyright (c) 2024-2025 bruvy"
OriginalFilename = "foximg.exe"

# Debian specific:

[package.metadata.deb]
separate-debug-symbols = true
assets = [
    "$auto",
    [
        "share/applications/foximg.desktop",
        "usr/share/applications/foximg.desktop",
        "644",
    ],
    [
        "share/pixmaps/foximg.png",
        "usr/share/pixmaps/foximg.png",
        "644",
    ],
]
recommends = [
    "libgl1",
    "libegl1",
    "libglx0",
    "libopengl0",
    "libxkbcommon0 (>= 0.5.0)",
    "libxi6 | libxkbcommon0 (>= 0.5.0)",
    "libx11-6 | libwayland-client0 (>= 1.0.2)",
    "libxrandr2 | libwayland-cursor0 (>= 1.0.2)",
    "libxcursor1 | libwayland-cursor0 (>= 1.0.2)",
    "zenity | kdialog | yad | python3-tk | python-tk"
]
